Cleaned up some spelling/grammer

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ referrerpolicy="no-referrer" />
                 area. I have experiance building software and securing systems. 
                 I bring a strong foundation in computer science with a focused path toward cybersecurity. I develop applications,
                 practice red and blue team operations, and work across the stack. 
-                I will begin my Bachelor’s in Computer Science in Fall 2026.</p>
+                I will begin my Bachelor’s in Computer Science in the Fall of 2026.</p>
 
             <div class="mission">
                 <h3>My mission</h3>   
@@ -79,7 +79,7 @@ referrerpolicy="no-referrer" />
      <section id ="skills" class="skills-section">
      <h2>Projects</h2>
      <div class ="text" >
-        Here below are some of the programming languages and tools
+        Here are some of the programming languages and tools
         I have experience with. Click on any one of them to see projects where I've applied it.
      </div>
 
@@ -119,9 +119,9 @@ referrerpolicy="no-referrer" />
     <div class="text">
         Want to talk security, software, 
         or collaborate on a project? I'm 
-        lways looking to connect with people 
+        always looking to connect with people 
         working on interesting problems.  
-         Open to internships, collaborations, and 
+         Open to employment opportunities, collaborations, and 
          good conversations. 
     </div>
 
