--- a/project.html
+++ b/project.html
@@ -36,55 +36,55 @@
     const data = {
       html: {
         title: "HTML",
-        summary: "Clean, semantic layouts with fast loads and accessible structure.",
+        summary: "Below are projects built by me using HTML",
         projects: [
           {
-            name: "Portfolio Landing",
-            desc: "Single-page marketing site with responsive hero, CTA buttons, and smooth anchor navigation.",
+            name: "Portfolio Site",
+            desc: "The site you are viewing is my personal portfolio showcasing projects, skills, and contact info with responsive design.",
             github: "https://github.com/MichaelGrassi?tab=projects"
           },
           {
-            name: "Docs Template",
-            desc: "Minimal docs skeleton with side nav, breadcrumb, and code-friendly typography.",
+            name: "Coming Soon",
+            desc: "",
             github: "https://github.com/MichaelGrassi?tab=projects"
           }
         ]
       },
       css: {
         title: "CSS",
-        summary: "Reusable component styles, gradients, and motion for polished UI.",
+        summary: "Below are projects built by me using CSS",
         projects: [
           {
-            name: "Mini Design System",
-            desc: "Token-based buttons, cards, and form controls with hover/active states and responsive spacing.",
+            name: "Coming soon",
+            desc: "",
             github: "https://github.com/MichaelGrassi?tab=projects"
           },
           {
-            name: "Dashboard Theme",
-            desc: "Grid/Flex dashboard layout with cards, charts area, and dark/light theme toggle.",
+            name: "Coming Soon",
+            desc: "",
             github: "https://github.com/MichaelGrassi?tab=projects"
           }
         ]
       },
       java: {
         title: "Java",
-        summary: "APIs and services with strong typing, testing, and logging.",
+        summary: "Below are projects built by me using Java",
         projects: [
           {
-            name: "Task API",
-            desc: "Spring Boot REST API with JWT auth, layered architecture, and integration tests.",
+            name: "Coming Soon",
+            desc: "",
             github: "https://github.com/MichaelGrassi?tab=projects"
           },
           {
-            name: "Telemetry Ingest",
-            desc: "Service that parses telemetry payloads, validates schema, and stores to Postgres.",
+            name: "Coming Soon",
+            desc: "",
             github: "https://github.com/MichaelGrassi?tab=projects"
           }
         ]
       },
       python: {
         title: "Python",
-        summary: "Automation, scripting, and lightweight services.",
+        summary: "Below are projects built by me using Python",
         projects: [
           {
             name: "Password Security Analyzer",
@@ -92,24 +92,24 @@
             github: "https://github.com/MichaelGrassi/password-security-analyzer"
           },
           {
-            name: "Data Prep Toolkit",
-            desc: "Utilities for CSV/JSON cleaning, schema validation, and quick visual summaries.",
+            name: "Coming Soon",
+            desc: "",
             github: "https://github.com/MichaelGrassi?tab=projects"
           }
         ]
       },
       cpp: {
         title: "C++",
-        summary: "Performance-minded systems code with modern C++ patterns.",
+        summary: "Below are projects built by me using C++",
         projects: [
           {
-            name: "Threaded Queue",
-            desc: "Lock-free queue experiment comparing throughput vs. mutex-based designs.",
+            name: "Coming Soon",
+            desc: "",
             github: "https://github.com/MichaelGrassi?tab=projects"
           },
           {
-            name: "Renderer Toy",
-            desc: "Tiny renderer exploring RAII, smart pointers, and move semantics for resource safety.",
+            name: "Coming Soon",
+            desc: "",
             github: "https://github.com/MichaelGrassi?tab=projects"
           }
         ]
